# youtube-client

./: .gitignore  CHANGELOG.md  CIAO-PRINCIPLES.md  LICENSE.md  README.md  RECOMMENDATION.md  SECURITY.md  build.sh  build.xml  meson.build  project.ini  project.sh
docs/: ant-steps.md  basic-steps.md  build-methods.md  gnu-make-steps.md  gradle-steps.md  meson-steps.md
src/main/c/: cookies.c  cookies.h  dialog_about.c  dialog_about.h  dialog_version.c  dialog_version.h  load_page.c  load_page.h  main.c  menu_bookmark.c  menu_bookmark.h  menu_bookmark_youtube.c  menu_bookmark_youtube.h  menu_exit.c  menu_exit.h  menu_user_agent.c  menu_user_agent.h  output.c  output.h  project.h  url_bar.c  url_bar.h  url_bar_callbacks.h  url_bar_go_button.c  url_bar_go_button.h  url_bar_page.c  url_bar_page.h  url_bar_user_agent.c  url_bar_user_agent.h
